--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rise"
 version = "0.1.0"
 authors = ["Jack Bass <jeb4571@rit.edu>"]
-
+edition = "2018"
 
 [dependencies]
 winit = "0.22.2"
@@ -10,3 +10,5 @@ wgpu = "0.5.2"
 image = "0.23"
 log = "0.4"
 cgmath = "0.17.0"
+futures = "0.3.4"
+bytemuck = "1.2.0"
