--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ cgmath = "0.17.0"
 futures = "0.3.4"
 bytemuck = "1.2.0"
 serde_json = "1.0"
+tobj = "2.0"
 
 [build-dependencies]
 shaderc = "0.6"
